Updated PBSpider and added functionality to interact with the pastebin scraping api (https://pastebin.com/doc_scraping_api).
Changes to be committed:
        modified:   .gitignore
        modified:   envs/.env.example
        modified:   pb-scrapy/items.py
        modified:   pb-scrapy/settings.py
        modified:   pb-scrapy/spiders/PBSpider.py
        deleted:    quotes-1.html
        deleted:    quotes-2.html

--- a/envs/.env.example
+++ b/envs/.env.example
@@ -2,10 +2,22 @@
 ########################################### pastebin ##############################################
 ###################################################################################################
 # API Reference: https://pastebin.com/doc_api
+# Scraping API Reference: https://pastebin.com/doc_scraping_api
 
 PASTEBIN_DEV_ENDPOINT = "https://pastebin.com/api/api_post.php"
 PASTEBIN_LOGIN_ENDPOINT = "https://pastebin.com/api/api_login.php"
 PASTEBIN_RAW_PASTE_ENDPOINT = "https://pastebin.com/api/api_raw.php"
+PASTEBIN_RECENT_PASTES_SCRAPING_ENDPOINT = "https://scrape.pastebin.com/api_scraping.php"
+
+# Max Value: 250
+PASTEBIN_RECENT_PASTES_LIMIT = 50 
 PASTEBIN_API_DEV_KEY = ''
 PASTEBIN_USERNAME = ''
 PASTEBIN_PASSWORD = ''
+
+###################################################################################################
+############################################# scrapy ##############################################
+###################################################################################################
+
+USER_AGENT = 'tutorial (+http://www.yourdomain.com)'
+ROBOTSTXT_OBEY = True
